--- a/HotelManagement/Areas/Admin/Views/Invoice/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Invoice/Index.cshtml
@@ -41,7 +41,9 @@
         <th>
             @Html.DisplayNameFor(model => model.NgayLapHoaDon)
         </th>
-        <th></th>
+        <th>
+            Action
+        </th>
     </tr>
     @foreach (var item in Model)
     {
