--- a/HotelManagement/Areas/Admin/Views/Room/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Details.cshtml
@@ -17,7 +17,7 @@
             <td>
                 @*@Html.DisplayFor(model => model.HienTrang)*@
                 @{
-                    string hienTrang = Model.HienTrang ? "Booked Room" : "Available Room";
+                    string hienTrang = Model.HienTrang ? "Unavailable Room" : "Available Room";
                 }
                 @hienTrang
             </td>
