--- a/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Room/Edit.cshtml
@@ -20,7 +20,7 @@
             @Html.LabelFor(model => model.HienTrang, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    <span>Còn trống</span>
+                    <span>Unavailable</span>
                     @Html.EditorFor(model => model.HienTrang)
                     @Html.ValidationMessageFor(model => model.HienTrang, "", new { @class = "text-danger" })
                 </div>
@@ -29,13 +29,13 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.MaLoaiPhong, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-6">
                 @Html.DropDownList("MaLoaiPhong", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaLoaiPhong, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group mt-32">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default create-btn" />
             </div>
@@ -43,6 +43,6 @@
     </div>
 }
 
-<div class="pl-12 ml-16 mt-32 mb-24">
+<div class=" ml-32 mt-32 mb-24">
     @Html.ActionLink("Back to List", "Index")
 </div>
