--- a/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
@@ -81,6 +81,6 @@
 </div>
 }
 
-<div class="pl-12 ml-16 mt-32 mb-24">
+<div class="ml-32 mt-32 mb-24">
     @Html.ActionLink("Back to List", "Index")
 </div>
