--- a/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="card-title title ml-32">Guests List</h2>
+<h2 class="card-title title ml-32">Guest List</h2>
 
 @using (Html.BeginForm("Search", "Guest", FormMethod.Get, new { @class = "search-form" }))
 {
