--- a/HotelManagement/Areas/Admin/Views/Invoice/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Invoice/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="card-title title ml-32">Details Invoice</h2>
+<h2 class="card-title title ml-32">Invoice @ViewBag.IDInvoice Detail</h2>
 
 <div>
     <hr />
