--- a/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<h2 class="card-title title ml-32">Services List</h2>
+<h2 class="card-title title ml-32">Service List</h2>
 
 @using (Html.BeginForm("Search", "Service", FormMethod.Get, new { @class = "search-form" }))
 {
