--- a/HotelManagement/Areas/Admin/Views/Guest/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="card-title title ml-32">Guest Details</h2>
+<h2 class="card-title title ml-32">Guest Detail</h2>
 
 <div>
     <hr />
