responsive admin page and add client page

--- a/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Edit.cshtml
@@ -73,7 +73,7 @@
     </div>
 }
 
-<div class="ml-32 mt-32 mb-24">
+<p class="ml-32 mt-32 mb-24 back-btn">
     @Html.ActionLink("Back to List", "Index")
-</div>
+</p>
 
