--- a/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Guest/Index.cshtml
@@ -28,64 +28,66 @@
 <p class="ml-32 mt-32 mb-24">
     @Html.ActionLink("Add New Guest", "Create", "Guest", null, new { @class = "create-btn" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TenKhachHang)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NgaySinh)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SoDienThoai)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CCCD)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LoaiKhachHang)
-        </th>
-        @*<th>
-                @Html.DisplayNameFor(model => model.TaiKhoanKHs.First().TenTaiKhoan)
-            </th>*@
-        <th>
-            Action
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<div class="table-section">
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenKhachHang)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgaySinh)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoDienThoai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CCCD)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LoaiKhachHang)
-            </td>
-            @*<td>
-                    @if (item.TaiKhoanKHs.Any())
-                    {
-                        @Html.DisplayFor(modelItem => item.TaiKhoanKHs.First().TenTaiKhoan)
-                    }
-                    else
-                    {
-                        @:N/A
-                    }
-                </td>*@
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MaKhachHang })
-                @Html.ActionLink("Details", "Details", new { id = item.MaKhachHang })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.TenKhachHang)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NgaySinh)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SoDienThoai)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CCCD)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LoaiKhachHang)
+            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.TaiKhoanKHs.First().TenTaiKhoan)
+                </th>*@
+            <th>
+                Action
+            </th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TenKhachHang)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NgaySinh)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SoDienThoai)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CCCD)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LoaiKhachHang)
+                </td>
+                @*<td>
+                        @if (item.TaiKhoanKHs.Any())
+                        {
+                            @Html.DisplayFor(modelItem => item.TaiKhoanKHs.First().TenTaiKhoan)
+                        }
+                        else
+                        {
+                            @:N/A
+                        }
+                    </td>*@
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.MaKhachHang })
+                    @Html.ActionLink("Details", "Details", new { id = item.MaKhachHang })
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
