--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Details.cshtml
@@ -68,7 +68,7 @@
         </tr>
     </table>
 </div>
-<p class="pl-12 ml-16 mt-32 mb-24">
+<p class="pl-12 ml-16 mt-32 mb-24 back-btn">
     @Html.ActionLink("Back to List", "Index")
 </p>
 
