--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Edit.cshtml
@@ -104,9 +104,9 @@
 </div>
 }
 
-<div class="ml-32 mt-32 mb-24">
+<p class="ml-32 mt-32 mb-24 back-btn">
     @Html.ActionLink("Back to List", "Index")
-</div>
+</p>
 
 <script>
     //===================== Hàm Làm mới danh sách sách mượn =====================
