--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Index.cshtml
@@ -22,65 +22,69 @@
 <p class="ml-32 mt-32 mb-24">
     @Html.ActionLink("Add New Registration Form", "Create", "RegistrationForm", null, new { @class = "create-btn" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.KhachHang.TenKhachHang)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.KhachHang.SoDienThoai)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ThoiGianNhanPhong)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ThoiGianTraPhong)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NgayLap)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HienTrang)
-        </th>
-        <th>
-            Action
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<div class="table-section">
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.KhachHang.TenKhachHang)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.KhachHang.SoDienThoai)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThoiGianNhanPhong)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThoiGianTraPhong)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayLap)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HienTrang)
-            </td>
-            <td>
-                @if (item.HienTrang == "Đã trả phòng" || item.HienTrang == "Đã hủy phòng")
-                {
-                    @Html.ActionLink("Details", "Details", new { id = item.MaPhieu })
-                }
-                else
-                {
-                    @: @Html.ActionLink("Edit", "Edit", new { id = item.MaPhieu })
-
-
-                    @: @Html.ActionLink("Details", "Details", new { id = item.MaPhieu })
-                }
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.KhachHang.TenKhachHang)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.KhachHang.SoDienThoai)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ThoiGianNhanPhong)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ThoiGianTraPhong)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NgayLap)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.HienTrang)
+            </th>
+            <th>
+                Action
+            </th>
         </tr>
-    }
-</table>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KhachHang.TenKhachHang)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KhachHang.SoDienThoai)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ThoiGianNhanPhong)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ThoiGianTraPhong)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NgayLap)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HienTrang)
+                </td>
+                <td>
+                    @if (item.HienTrang == "Đã trả phòng" || item.HienTrang == "Đã hủy phòng")
+                    {
+                        @Html.ActionLink("Details", "Details", new { id = item.MaPhieu })
+                    }
+                    else
+                    {
+                        @: @Html.ActionLink("Edit", "Edit", new { id = item.MaPhieu })
+
+
+
+
+                        @: @Html.ActionLink("Details", "Details", new { id = item.MaPhieu })
+                    }
+                </td>
+            </tr>
+        }
+    </table>
+</div>
