--- a/HotelManagement/Areas/Admin/Views/RoomType/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Details.cshtml
@@ -40,6 +40,6 @@
 <p class="pl-12 ml-16 mt-32 mb-24">
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaLoaiPhong }, new { @class = "create-btn" })
 </p>
-<p class="pl-12 ml-16 mt-32 mb-24">
+<p class="pl-12 ml-16 mt-32 mb-24 back-btn">
     @Html.ActionLink("Back to List", "Index")
 </p>
