--- a/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RoomType/Index.cshtml
@@ -23,43 +23,45 @@
     @Html.ActionLink("Add New Room Type", "Create", "RoomType", null, new { @class = "create-btn" })
 </p>
 
-<table class="table room-type-list">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TenLoaiPhong)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GiaLoaiPhong)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.HinhAnh)
-        </th>*@
-        <th>
-            Action
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<div class="table-section">
+    <table class="table room-type-list">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenLoaiPhong)
-            </td>
-            <td>
-                @*@Html.DisplayFor(modelItem => item.GiaLoaiPhong)*@
-                @{
-                    var giaLP = item.GiaLoaiPhong;
-                }
-                @String.Format("{0:#,##0}", giaLP).Replace(",", ".") VNĐ
-            </td>
-            @*<td>
-                <img src="~/Assets/admin/img/@item.HinhAnh" style="width: 100px;" />
-            </td>*@
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.MaLoaiPhong.Trim() })
-                @Html.ActionLink("Details", "Details", new { id = item.MaLoaiPhong.Trim() })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.TenLoaiPhong)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.GiaLoaiPhong)
+            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.HinhAnh)
+                </th>*@
+            <th>
+                Action
+            </th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TenLoaiPhong)
+                </td>
+                <td>
+                    @*@Html.DisplayFor(modelItem => item.GiaLoaiPhong)*@
+                    @{
+                        var giaLP = item.GiaLoaiPhong;
+                    }
+                    @String.Format("{0:#,##0}", giaLP).Replace(",", ".") VNĐ
+                </td>
+                @*<td>
+                        <img src="~/Assets/admin/img/@item.HinhAnh" style="width: 100px;" />
+                    </td>*@
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.MaLoaiPhong.Trim() })
+                    @Html.ActionLink("Details", "Details", new { id = item.MaLoaiPhong.Trim() })
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
