--- a/HotelManagement/Areas/Admin/Views/Service/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Service/Edit.cshtml
@@ -41,7 +41,7 @@
     </div>
 }
 
-<div class="ml-32 mt-32 mb-24">
+<p class="ml-32 mt-32 mb-24 back-btn">
     @Html.ActionLink("Back to List", "Index")
-</div>
+</p>
 
