--- a/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Details.cshtml
@@ -71,6 +71,6 @@
 <p class="pl-12 ml-16 mt-32 mb-24">
     @Html.ActionLink("Edit", "Edit", new { id = Model.MaNhanVien }, new { @class = "create-btn" })
 </p>
-<p class="pl-12 ml-16 mt-32 mb-24">
+<p class="pl-12 ml-16 mt-32 mb-24 back-btn">
     @Html.ActionLink("Back to List", "Index")
 </p>
