--- a/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
@@ -81,6 +81,6 @@
 </div>
 }
 
-<div class="ml-32 mt-32 mb-24">
+<p class="ml-32 mt-32 mb-24" style="margin-bottom: 32px;">
     @Html.ActionLink("Back to List", "Index")
-</div>
+</p>
