--- a/HotelManagement/Content/StyleCustom.css
+++ b/HotelManagement/Content/StyleCustom.css
@@ -1,4 +1,13 @@
-﻿.menu-toggle {
+﻿input, select, textarea {
+    max-width: 100%;
+}
+
+.inactive {
+    opacity: .3;
+    cursor: default !important;
+}
+
+.menu-toggle {
     display: flex;
     text-align: center;
 }
@@ -248,6 +257,14 @@ body {
         color: #51a7fe;
     }
 
+.block-inactive {
+    z-index: 2;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+}
+
 .room-type {
     font-weight: 700;
     font-size: 1.4rem !important;
@@ -303,6 +320,7 @@ body {
     font-weight: 700;
     height: 100%;
     margin: 0;
+    text-align: center;
 }
 
 .fa-star {
@@ -675,4 +693,3 @@ body {
     cursor: pointer;
 }
 
-/*-----------End Toast Message------------*/
