--- a/HotelManagement/Views/Booking/Index.cshtml
+++ b/HotelManagement/Views/Booking/Index.cshtml
@@ -19,7 +19,8 @@
                         <div class="col-md-7 mb-3 mb-lg-0 col-lg-5">
                             <label for="checkin_date" class="font-weight-bold text-black">Check In</label>
                             <div class="field-icon-wrap">
-                                <input type="date" id="checkin_date" class="form-control" pattern="\d{4}-\d{2}-\d{2}">
+                                <input type="date" id="checkin_date" class="form-control" pattern="\d{4}-\d{2}-\d{2}"
+                                       onchange="checkCheckInDate()">
                             </div>
                         </div>
                         <div class="col-md-7 mb-3 mb-lg-0 col-lg-5">
@@ -29,7 +30,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 col-lg-2 align-self-end">
-                            <button class="btn btn-primary btn-block text-white avl-btn">Check Availabilt</button>
+                            <button class="btn btn-primary btn-block text-white avl-btn" onclick="checkAvailableDate(e)">Check Availabilty</button>
                         </div>
                     </div>
                 </form>
@@ -157,3 +158,79 @@
 
     </div>
 </section>
+
+<script>
+    var dateCheckIn = document.querySelector("#checkin_date");
+    var dateCheckOut = document.querySelector("#checkout_date");
+    const checkAvailableBtn = document.querySelector('.avl-btn');
+
+    const checkList = {
+        checkin: '',
+        checkout: '',
+        adult: 1,
+        children: 1,
+    };
+    var checkinForForm = '';
+    var checkoutForForm = '';
+
+    checkAvailableBtn.onclick = (e) => {
+        e.preventDefault();
+        checkList.checkin = dateCheckIn.value;
+        checkList.checkout = dateCheckOut.value;
+
+        checkinForForm = dateCheckIn.value;
+        checkoutForForm = dateCheckOut.value;
+        if (checkinForForm != "" && checkoutForForm != "") {
+            //bookBtn.onclick = (e) => {
+            //    e.preventDefault();
+            //}
+            for (const block of blockInactive) {
+                block.style.display = "none";
+            }
+            for (const roomQuantity of roomQuantities) {
+                roomQuantity.style.opacity = "1";
+            }
+        }
+        else if (checkinForForm == "" || checkoutForForm == "") {
+            //bookBtn.onclick = (e) => {
+            //    e.preventDefault();
+            //}
+            for (const block of blockInactive) {
+                block.style.display = "block";
+                if (block.style.display == "block") {
+                    bookBtn.classList.add("inactive");
+                }
+            }
+            for (const roomQuantity of roomQuantities) {
+                roomQuantity.style.opacity = ".3";
+            }
+        }
+    }
+
+    function checkCheckInDate() {
+        var date = new Date(dateCheckIn.value);
+        date.setDate(date.getDate() + 1);
+        var formatDate = date.toISOString().split('T')[0];
+        dateCheckOut.min = formatDate;
+
+        var checkInValue = dateCheckIn.value;
+
+        // Nếu date1 có giá trị
+        if (checkInValue) {
+            // Tạo đối tượng Date từ giá trị ngày của date1
+            var date1 = new Date(checkInValue);
+
+            // Tăng ngày lên 1
+            date1.setDate(date1.getDate() + 1);
+
+            // Format ngày thành chuỗi 'YYYY-MM-DD' cho date2
+            var formattedDate = date1.toISOString().split('T')[0];
+
+            // Gán giá trị cho date2
+            dateCheckOut.value = formattedDate;
+        } else {
+            // Nếu date1 không có giá trị, đặt giá trị của date2 thành rỗng
+            dateCheckOut.value = '';
+        }
+    }
+</script>
